@@ -1,10 +1,13 @@
 /*
- * Copyright (c) 1995, Index Data.
+ * Copyright (c) 1995-1998, Index Data.
  * See the file LICENSE for details.
  * Sebastian Hammer, Adam Dickmeiss
  *
  * $Log: prt-exd.c,v $
- * Revision 1.5  1997-04-30 08:52:02  quinn
+ * Revision 1.6  1998-01-05 09:04:57  adam
+ * Fixed bugs in encoders/decoders - Not operator (!) missing.
+ *
+ * Revision 1.5  1997/04/30 08:52:02  quinn
  * Null
  *
  * Revision 1.4  1996/10/10  12:35:12  quinn
@@ -265,7 +268,7 @@ int z_IUSuppliedRecords_elem (ODR o, Z_IUSuppliedRecords_elem **p, int opt)
 
 int z_IUSuppliedRecords (ODR o, Z_IUSuppliedRecords **p, int opt)
 {
-    if (odr_initmember (o, p, sizeof(**p)))
+    if (!odr_initmember (o, p, sizeof(**p)))
         return opt && odr_ok(o);
     if (odr_sequence_of (o, z_IUSuppliedRecords_elem, &(*p)->elements,
         &(*p)->num))
